--- a/MenuPrincipal/tela_menu_principal.html
+++ b/MenuPrincipal/tela_menu_principal.html
@@ -63,11 +63,12 @@
 <main>
     <h2>Em busca de uma clinica?</h2>
     <h4>Clinicas Disponiveis</h4>
-    <div class="button_options">
+    <div class="principal">
+      <div class="opcoes">
         <div class="options " onclick="location.href='../Perfil/perfil.html'">
             <img class="imagem_clinica" src="../OdontoIMG/Clinica Sorriso.png" alt="">
             <div>
-            <h4 class="estilo">Clinica Sorriso Vivo Odontologia</h3>
+            <h3>Clinica Sorriso Vivo Odontologia</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             <h6><b>Consulta:</b> R$ 250,00</h6>
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
@@ -76,7 +77,7 @@
         <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="../OdontoIMG/Clinica Odonto.png" alt="">
             <div>
-            <h4 class="estilo">Clinica Dental Prime</h3>
+            <h3>Clinica Dental Prime</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
             <h6><b>Consulta:</b> R$ 200,00</h6>
             <h6><b>Horários Disponiveis:</b> 08:00h | 09:00h | 11:00h</h6>
@@ -85,7 +86,7 @@
         <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="../OdontoIMG/Clinica Mais Saúde.png" alt="">
             <div>
-            <h4 class="estilo">Odonto Mais Saúde</h3>
+            <h3>Odonto Mais Saúde</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
             <h6><b>Consulta:</b> R$ 255,00</h6>
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
@@ -94,7 +95,7 @@
         <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="../OdontoIMG/Clinica Sorrir Bem.png" alt="">
             <div>
-            <h4 class="estilo">Clinica Sorrir Bem</h3>
+            <h3>Clinica Sorrir Bem</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
             <h6><b>Consulta:</b> R$ 200,00</h6>
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
@@ -103,13 +104,35 @@
         <div class="options" onclick="location.href='Perfil.html'">
             <img class="imagem_clinica" src="../OdontoIMG/Clinica Orto.png" alt="">
             <div>
-            <h4>Orto & Estética</h3>
+            <h3>Orto & Estética</h3>
             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
             <h6><b>Consulta:</b> R$ 250,00</h6>
             <h6><b>Horários Disponiveis:</b> 11:00h | 12:00h</h6>
             </div>
         </div>
+      </div>
+
+      <div class="setup">
+        <div class="filtros">
+          <h4>Filtros</h4>
+          <h4>Busca</h4>
+          <select class="valores">
+            <option>Selecione o seu municipio</option>
+          </select>
+          <select class="valores">
+            <option>Selecione o seu bairro</option>
+          </select>
+          <button class="aplicar">Aplicar</button>
+        </div>
+
+        <div class="avaliacao">
+          <h4>Avaliação</h4>
+           <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+          <button class="aplicar">Aplicar</button>
+        </div>
+      </div>
     </div>
+
     <div class="more_options">
       <h4 class="tipo_opcao">Ver Mais</h4>
     </div>
